fix layout z-index and add load more

--- a/src/styles/components/layout/navbar.css
+++ b/src/styles/components/layout/navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  @apply flex fixed w-screen py-4 text-white shadow-md;
+  @apply flex fixed w-screen z-10 py-4 text-white shadow-md;
   background-image: linear-gradient(135deg, rgb(177,123,111) 10%, rgb(221,167,158))!important;
 }
 
